feat : health check and dockerfile
