# http/gen/api_server_gen.go
@@ -37,6 +37,9 @@ type ServerInterface interface {
 	// Leave a club
 	// (POST /clubs/{clubId}/leave)
 	LeaveClub(c *fiber.Ctx, clubId string) error
+	// Health Check
+	// (GET /health)
+	GetHealth(c *fiber.Ctx) error
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -194,6 +197,12 @@ func (siw *ServerInterfaceWrapper) LeaveClub(c *fiber.Ctx) error {
 	return siw.Handler.LeaveClub(c, clubId)
 }
 
+// GetHealth operation middleware
+func (siw *ServerInterfaceWrapper) GetHealth(c *fiber.Ctx) error {
+
+	return siw.Handler.GetHealth(c)
+}
+
 // FiberServerOptions provides options for the Fiber server.
 type FiberServerOptions struct {
 	BaseURL     string
@@ -230,5 +239,7 @@ func RegisterHandlersWithOptions(router fiber.Router, si ServerInterface, option
 	router.Post(options.BaseURL+"/clubs/:clubId/join", wrapper.JoinClub)
 
 	router.Post(options.BaseURL+"/clubs/:clubId/leave", wrapper.LeaveClub)
+
+	router.Get(options.BaseURL+"/health", wrapper.GetHealth)
 
 }
